force-app/main/default/objects/API_Event_Archive__c/API_Event_Archive__c.object-meta.xml
<CustomObject>
    <label>API Event Archive</label>
    <nameField>
        <displayFormat>API-{0000000000}</displayFormat>
        <label>API Event Archive Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>API Event Archives</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>