force-app/main/default/objects/API_Event_Archive__c/fields/DB_Total_Time__c.field-meta.xml
<CustomField>
    <fullName>DB_Total_Time__c</fullName>
    <label>DB Total Time (ms)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>