force-app/main/default/objects/API_Event_Archive__c/fields/Request_Id__c.field-meta.xml
<CustomField>
    <fullName>Request_Id__c</fullName>
    <externalId>true</externalId>
    <label>Request ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>