force-app/main/default/objects/API_Event_Archive__c/fields/Request_Size__c.field-meta.xml
<CustomField>
    <fullName>Request_Size__c</fullName>
    <label>Request Size (bytes)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>