force-app/main/default/objects/API_Event_Archive__c/fields/Response_Size__c.field-meta.xml
<CustomField>
    <fullName>Response_Size__c</fullName>
    <label>Response Size (bytes)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>