force-app/main/default/objects/API_Event_Archive__c/fields/Response_Time__c.field-meta.xml
<CustomField>
    <fullName>Response_Time__c</fullName>
    <label>Response Time (ms)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>