force-app/main/default/objects/API_Event_Archive__c/fields/Run_Time__c.field-meta.xml
<CustomField>
    <fullName>Run_Time__c</fullName>
    <label>Run Time (ms)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>