force-app/main/default/objects/API_Event_Archive__c/fields/URI__c.field-meta.xml
<CustomField>
    <fullName>URI__c</fullName>
    <label>URI</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>