force-app/main/default/objects/API_Event_Archive__c/fields/User_Agent__c.field-meta.xml
<CustomField>
    <fullName>User_Agent__c</fullName>
    <label>User Agent</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>