force-app/main/default/objects/API_Event_Archive__c/fields/User_Id__c.field-meta.xml
<CustomField>
    <fullName>User_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>API Event Archives</relationshipLabel>
    <relationshipName>API_Event_Archives</relationshipName>
    <type>Lookup</type>
</CustomField>